--- a/src/app/components/pages/merchandise/branch-transfer/branch-transfer.component.html
+++ b/src/app/components/pages/merchandise/branch-transfer/branch-transfer.component.html
@@ -266,7 +266,7 @@
                                     <span *ngIf="!data.isEditing && data.productType === 0" 
                                         style="cursor: pointer;" 
                                         (click)="toggleEdit(data)">
-                                        {{ data.quantity || 0 }} / {{ data.availableQuantity }}
+                                        {{ data.quantity || 0 }} / {{ this.totalRecords }}
                                     </span>
 
                                     <p-inputNumber
@@ -282,7 +282,7 @@
                                         spinnerMode="horizontal"
                                         [min]="0"
                                         [step]="0"
-                                        [max]="data.availableQuantity"
+                                        [max]="this.totalRecords"
                                     />
 
                                     <span *ngIf="data.isValid" class="error-message" style="color: red; font-size: 12px;">
@@ -290,13 +290,28 @@
                                     </span>
 
                                     <span
-                                        *ngIf="data.productType === 1"
-                                        style="
-                                           
+                                        *ngIf="!data.isEditing2 && data.productType === 1"
+                                        style="  
                                             width: 100%;
                                         "
-                                        >{{ data.quantity }}</span
+                                        (click)="toggleEdit2(data)"
+                                        >{{ data.quantity }} / {{ this.totalRecords }}</span
                                     >
+                                    <p-inputNumber
+                                        *ngIf="data.isEditing2 && data.productType === 1"
+                                        [(ngModel)]="data.quantity"
+                                        (onFocus)="functionService.handleFocusPrice($event)"
+                                        (ngModelChange)="updateTotal(data); validateQuantity(data)"
+                                        (onFocus)="functionService.handleFocusPrice($event)"
+                                        (onBlur)="toggleEdit2(data, true)"
+                                        (onKeydown.enter)="toggleEdit2(data, true)"  
+                                        buttonLayout="horizontal"
+                                        inputId="horizontal"
+                                        spinnerMode="horizontal"
+                                        [min]="0"
+                                        [step]="0"
+                                        [max]="this.totalRecords"
+                                    />
                                     <span
                                         style="
                                             position: absolute;
@@ -351,9 +366,45 @@
                                     </div>
                                 </td>
                             </tr>
+
+                            <tr *ngIf="data.productType == 0 || this.items2?.length > 0">
+                                <td colspan="8" class="p-3 border-none">
+                                    <button type="button" pButton label="Show Product Codes" icon="pi pi-search" (click)="openProductCodesDialog(data)"></button>
+                                </td>
+
+                            </tr>
                         </ng-template>
-                    </p-table>   
-                 
+                    </p-table>               
+                    <p-dialog 
+                        header="Product Codes" 
+                        [(visible)]="showProductCodesDialog" 
+                        [modal]="true" 
+                        [closable]="true">
+                        <ng-template pTemplate="content">
+                            <div *ngIf="selectedProduct">
+                                <h3>{{ selectedProduct.name }}</h3>
+                                <div *ngIf="selectedProduct.productCodeData?.length > 0">
+                                    <div style="display: flex; flex-wrap: wrap;">
+                                        <div style="display: flex;" *ngFor="let code of selectedProduct.productCodeData">
+                                            <input 
+                                                style="margin: 0 10px;" 
+                                                type="checkbox" 
+                                                class="large-checkbox" 
+                                                [(ngModel)]="code.isChecked" 
+                                                (change)="updateQuantity2(selectedProduct)" 
+                                            />
+                                            <div style="margin: 5px 0;" class="variant-item">
+                                                <span class="variant-item-label">Mã code: {{ code.code }}</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <span *ngIf="selectedProduct.isValid1" class="error-message" style="color: red;">
+                                    {{ selectedProduct.isValidMessage3 }}
+                                </span>
+                            </div>
+                        </ng-template>
+                    </p-dialog>
                 </div>
             </div>
             <div class="col-4">
