--- a/src/app/components/auth/set-password/set-password.component.html
+++ b/src/app/components/auth/set-password/set-password.component.html
@@ -30,7 +30,7 @@
                             Xin chào, Tiến Linh!
                         </div>
                         <span class="text-600 font-medium"
-                            >Tiếp tục đăng nhập</span
+                            >Thay đổi mật </span
                         >
                     </div>
 
@@ -117,7 +117,7 @@
                                 <!-- [(ngModel)]="loginRequest.rememberMe" -->
                                 <label for="rememberme1">Nhớ mật khẩu</label>
                             </div>
-                            <a [routerLink]="['/auth/set-password']"
+                            <a
                                 class="font-medium no-underline ml-2 text-right cursor-pointer"
                                 style="color: var(--primary-color)"
                                 >Quên mật khẩu?</a
