--- a/src/app/components/pages/merchandise/branch-transfer/branch-transfer.component.html
+++ b/src/app/components/pages/merchandise/branch-transfer/branch-transfer.component.html
@@ -265,11 +265,11 @@
 
                                     <span *ngIf="!data.isEditing && data.productType === 0" 
                                         style="cursor: pointer;" 
-                                        (click)="toggleEdit(data)">
+                                        >
                                         {{ data.quantity || 0 }} / {{ this.totalRecords }}
                                     </span>
 
-                                    <p-inputNumber
+                                    <!-- <p-inputNumber
                                         *ngIf="data.isEditing && data.productType === 0"
                                         [(ngModel)]="data.quantity"
                                         (onFocus)="functionService.handleFocusPrice($event)"
@@ -283,7 +283,7 @@
                                         [min]="0"
                                         [step]="0"
                                         [max]="this.totalRecords"
-                                    />
+                                    /> -->
 
                                     <span *ngIf="data.isValid" class="error-message" style="color: red; font-size: 12px;">
                                         {{ data.isValidMessageQuantity }} <!-- Error message when invalid quantity -->
@@ -294,10 +294,10 @@
                                         style="  
                                             width: 100%;
                                         "
-                                        (click)="toggleEdit2(data)"
+                                        
                                         >{{ data.quantity }} / {{ this.totalRecords }}</span
                                     >
-                                    <p-inputNumber
+                                    <!-- <p-inputNumber
                                         *ngIf="data.isEditing2 && data.productType === 1"
                                         [(ngModel)]="data.quantity"
                                         (onFocus)="functionService.handleFocusPrice($event)"
@@ -311,7 +311,7 @@
                                         [min]="0"
                                         [step]="0"
                                         [max]="this.totalRecords"
-                                    />
+                                    /> -->
                                     <span
                                         style="
                                             position: absolute;
@@ -349,62 +349,87 @@
                                     ></i>
                                 </td>
                             </tr>
-                            <tr *ngIf="data.productType == 1 || this.items?.length > 0">
+                            <tr *ngIf="data.productType == 1">
                                 <td colspan="8" class="p-3 border-none">
-                                    <div class="flex flex-column">
-                                        <div style="display: flex; flex-wrap: wrap;">
-                                            <div style="display: flex;" *ngFor="let frameEngine of data.frameEngineData">
-                                                <input style="margin: 0 10px;" type="checkbox" class="large-checkbox" [(ngModel)]="frameEngine.isChecked" (change)="updateQuantity(data)"/>
-                                                 <div style="margin: 5px 0;" class="variant-item">
-                                                     <span class="variant-item-label">{{ frameEngine.frameNumber }} / {{ frameEngine.engineNumber }}</span>
-                                                 </div>
-                                            </div>
-                                        </div>
-                                        <span *ngIf="data.isValid" class="error-message" style="color: red;">
-                                            {{ data.isValidMessage }}
-                                        </span>
-                                    </div>
+                                    <button type="button" pButton label="Danh sách mã số khung/số máy" icon="pi pi-align-justify" (click)="openProductFrameEnginDialog(data)"></button>
                                 </td>
                             </tr>
 
-                            <tr *ngIf="data.productType == 0 || this.items2?.length > 0">
+                            <tr *ngIf="data.productType == 0">
                                 <td colspan="8" class="p-3 border-none">
-                                    <button type="button" pButton label="Show Product Codes" icon="pi pi-search" (click)="openProductCodesDialog(data)"></button>
-                                </td>
-
+                                    <button type="button" pButton label="Danh sách mã code" icon="pi pi-align-justify" (click)="openProductCodesDialog(data)"></button>
+                                </td>                        
                             </tr>
-                        </ng-template>
-                    </p-table>               
-                    <p-dialog 
-                        header="Product Codes" 
-                        [(visible)]="showProductCodesDialog" 
-                        [modal]="true" 
-                        [closable]="true">
-                        <ng-template pTemplate="content">
-                            <div *ngIf="selectedProduct">
-                                <h3>{{ selectedProduct.name }}</h3>
-                                <div *ngIf="selectedProduct.productCodeData?.length > 0">
-                                    <div style="display: flex; flex-wrap: wrap;">
-                                        <div style="display: flex;" *ngFor="let code of selectedProduct.productCodeData">
-                                            <input 
-                                                style="margin: 0 10px;" 
-                                                type="checkbox" 
-                                                class="large-checkbox" 
-                                                [(ngModel)]="code.isChecked" 
-                                                (change)="updateQuantity2(selectedProduct)" 
-                                            />
-                                            <div style="margin: 5px 0;" class="variant-item">
-                                                <span class="variant-item-label">Mã code: {{ code.code }}</span>
+
+                            <div class="dialog">
+                                <p-dialog 
+                                        header="DANH SÁCH MÃ CODE" 
+                                        [(visible)]="showProductCodesDialog" 
+                                        [modal]="true" 
+                                        [closable]="true" 
+                                        [style]="{width: '1220px', height: '600px'}"
+                                        [contentStyle]="{'max-height': '500px', 'overflow': 'auto'}"> 
+                                        <ng-template pTemplate="content">
+                                            <div *ngIf="selectedProduct">
+                                                <h3>{{ selectedProduct.name }}</h3>
+                                                <div style="margin-top: 20px;" *ngIf="selectedProduct.productCodeData?.length > 0">
+                                                    <div style="display: flex; flex-wrap: wrap;">
+                                                        <div style="display: flex;" *ngFor="let code of selectedProduct.productCodeData">
+                                                            <input 
+                                                                style="margin: 0 10px;" 
+                                                                type="checkbox" 
+                                                                class="large-checkbox" 
+                                                                [(ngModel)]="code.isChecked" 
+                                                                (change)="updateQuantity2(selectedProduct)" 
+                                                            />
+                                                            <div style="margin: 5px 0;" class="variant-item">
+                                                                <span class="variant-item-label">Mã code: {{ code.code }}</span>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <span *ngIf="selectedProduct.isValid1" class="error-message" style="color: red;">
+                                                    {{ selectedProduct.isValidMessage3 }}
+                                                </span>
                                             </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <span *ngIf="selectedProduct.isValid1" class="error-message" style="color: red;">
-                                    {{ selectedProduct.isValidMessage3 }}
-                                </span>
+                                        </ng-template>
+                                </p-dialog>
+
+                                <p-dialog 
+                                        header="DANH SÁCH MÃ SỐ KHUNG/SỐ MÁY" 
+                                        [(visible)]="showFrameEnginDialog" 
+                                        [modal]="true" 
+                                        [closable]="true" 
+                                        [style]="{width: '1220px', height: '600px'}"
+                                        [contentStyle]="{'max-height': '500px', 'overflow': 'auto'}"> 
+                                        <ng-template pTemplate="content">
+                                            <div *ngIf="selectedFrameEngin">
+                                                <h3>{{ selectedFrameEngin.name }}</h3>
+                                                <div style="margin-top: 20px;" *ngIf="selectedFrameEngin.frameEngineData?.length > 0">
+                                                    <div style="display: flex; flex-wrap: wrap;">
+                                                        <div style="display: flex;" *ngFor="let frameEngine of selectedFrameEngin.frameEngineData">
+                                                            <input 
+                                                                style="margin: 0 10px;" 
+                                                                type="checkbox" 
+                                                                class="large-checkbox" 
+                                                                [(ngModel)]="frameEngine.isChecked" 
+                                                                (change)="updateQuantity(selectedFrameEngin)" 
+                                                            />
+                                                            <div style="margin: 5px 0;" class="variant-item">
+                                                                <span class="variant-item-label">{{ frameEngine.frameNumber }} / {{ frameEngine.engineNumber }}</span>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <span *ngIf="selectedFrameEngin.isValid" class="error-message" style="color: red;">
+                                                    {{ selectedFrameEngin.isValidMessage }}
+                                                </span>
+                                            </div>
+                                        </ng-template>
+                                </p-dialog>
                             </div>
                         </ng-template>
-                    </p-dialog>
+                    </p-table>               
                 </div>
             </div>
             <div class="col-4">
