--- a/src/app/components/pages/inventory-product/inventory-branch copy/inventory-branch.component.html
+++ b/src/app/components/pages/inventory-product/inventory-branch copy/inventory-branch.component.html
@@ -2,7 +2,7 @@
     <div class="col-12">
         <p-toolbar styleClass="mb-2">
             <div class="">
-                <h3>Danh sách tồn kho đại lý</h3>
+                <h3>Danh sách tồn kho {{branchName}}</h3>
                 <p-breadcrumb
                     [model]="items"
                     [home]="{ icon: 'pi pi-home' }"
