--- a/src/app/components/pages/warranty/warranty-certificate/warranty-certificate.component.html
+++ b/src/app/components/pages/warranty/warranty-certificate/warranty-certificate.component.html
@@ -238,7 +238,8 @@
                                                 htmlfor="name3"
                                                 class="col-12 mb-2 md:col-7 md:mb-0"
                                             >
-                                                {{
+                                                {{ warrantyOrder.productCode }}
+                                                <!-- {{
                                                     warrantyOrder
                                                         .warrantyProducts[0]
                                                         .inventoryStockDetailProductImei
@@ -248,7 +249,7 @@
                                                         .warrantyProducts[0]
                                                         .inventoryStockDetailProductImei
                                                         .engineNumber
-                                                }}
+                                                }} -->
                                             </div>
                                         </div>
                                         <div class="field grid">
